# wirescope

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-test.yml  create-release-pr.yml  release-pr.yml  release.yml
public/: presets.json
src/: App.tsx  constants.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checksum.rs  commands.rs  lib.rs  main.rs  payload.rs  serial.rs  serial_port.rs  socket.rs  splitter.rs  state.rs  telemetry.rs
src/app/: App.tsx  store.tsx
src/app/styles/: globals.css
src/components/: LogView.tsx  LogoMark.tsx  SerialPanel.tsx  SocketPanel.tsx
src/features/configure-splitter/: SettingsPanel.module.css  SettingsPanel.tsx
src/hooks/: useConnectionStatus.ts  useLogStream.ts  useSerialPorts.ts
src/lib/: format.ts  settings.ts
src/pages/analyzer/: Analyzer.module.css  index.tsx
src/pages/checksum/: Checksum.module.css  index.tsx
src/pages/connect/: Connect.module.css  index.tsx
src/pages/splitter/: Splitter.module.css  index.tsx
src/pages/workspace/: Workspace.module.css  index.tsx
src/shared/: types.ts
src/shared/api/: tauri.ts
src/shared/config/: tokens.ts
src/shared/lib/: format.ts  hooks.ts  update-context.tsx
src/shared/workers/: checksumWorker.ts
src/types/: wirescope.ts
src/widgets/connection-rail/: Rail.module.css  index.tsx
src/widgets/export-dialog/: ExportDialog.module.css  index.tsx
src/widgets/main-toolbar/: Toolbar.module.css  index.tsx
(+30 files in other folders)
