[package]
name = "wirescope"
version = "1.0.0"
description = "Real-time serial port and network socket monitoring tool"
authors = ["lunDreame"]
license = "MIT"
repository = "https://github.com/lundreame/wirescope"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
serialport = "4.8"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
crossbeam-channel = "0.5"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
tauri-plugin-log = "2"
log = "0.4"
libc = "0.2"
