[package]
name = "wirescope"
version = "0.1.1"
description = "WireScope"
authors = ["lunDreame"]
edition = "2021"

[lib]
name = "wirescope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Serial port
serialport = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Checksum
crc = "3"

# Concurrency
parking_lot = "0.12"

# Native file dialog
tauri-plugin-dialog = "2"
